--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
@@ -38,7 +42,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest --config=jest-config.js"
   },
   "repository": {
     "type": "git",
