--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-remark-images": "^4.1.1",
+    "gatsby-remark-prismjs": "^4.1.0",
+    "gatsby-remark-responsive-iframe": "^3.1.0",
+    "gatsby-remark-smartypants": "^3.1.0",
     "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "prism-themes": "^1.6.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
